--- a/src/ui.scss
+++ b/src/ui.scss
@@ -17,14 +17,19 @@ body, p {
 body {
 	display: flex;
     flex-direction: column;
+    height: 100%;
 }
 
 
 .disclosure {
+	&__label {
+        padding-right: 12px;
+	}
 	&__content {
 	    grid-template-columns: 1fr max-content;
 	    grid-gap: 1em;
 	    cursor: default;
+        padding-right: 12px;
 	    &.section {
 	        margin: 0 0 -8px -8px;
 	    }
@@ -154,4 +159,52 @@ body {
 
 .hidden {
 	display: none !important;
+}
+
+
+
+
+// simplebar
+
+#app {
+	overflow: auto;
+    height: 100%;
+	.simplebar-track {
+		opacity: 0;
+		transition: opacity 0s linear .1s;
+	}
+	&:hover {
+		.simplebar-track {
+			opacity: 1;
+		}
+	}
+}
+
+
+
+.simplebar-scrollbar {
+	width: 6px;
+    top: 0;
+	box-sizing: content-box;
+	&::before {
+		width: 100%;
+		border-radius: 6px;
+		background: rgba(0,0,0,.15);
+		transition: opacity 0.1s linear;
+	}
+	&.simplebar-visible:before {
+		opacity: 1;
+	}
+}
+.simplebar-track {
+	&.simplebar-vertical {
+		width: 6px;
+		padding: 2px;
+		border-left: 1px solid transparent;
+		box-sizing: content-box;
+	}
+	&.simplebar-vertical.simplebar-hover {
+		border-left: 1px solid #efefef;
+		background: hsla(0,0%,99%,.5);
+	}
 }
